# hass_lmair_2026

./: Agents.md  CHANGELOG.md  CHANGELOG_ASSISTANT.md  README.md  __init__ (1).py  button.py  config_flow.py  cover.py  download  en.json  entity_utils.py  event.py  hacs.json  light.py  manifest.json  pyproject.toml  remote.py  sensor.py  services.yaml  switch.py  test_lmair.py
custom_components/light_manager_air/: __init__.py  base_entity.py  button.py  config_flow.py  const.py  cover.py  entity_utils.py  event.py  light.py  lmair.py  manifest.json  remote.py  sensor.py  services.yaml
custom_components/light_manager_air/translations/: de.json  en.json
