[build-system]
requires      = ["setuptools>=61.0.0", "requests>=2.28.0"]
build-backend = "setuptools.build_meta"

[project]
name = "light-manager-air"
version = "1.3.0-beta.3"
description = "Home Assistant custom integration for the Light Manager Air by jb media."
readme = "README.md"
authors = [{ name = "Mario Marx", email = "marioir@web.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["jbmedia", "smart home", "light manager"]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.urls]
Homepage = "https://github.com/marioir2001/hass_lmair_2026"
