[build-system]
requires      = ["setuptools>=61.0.0", "requests>=2.28.0"]
build-backend = "setuptools.build_meta"

[project]
name = "light-manager-air"
version = "1.2.7"
description = "Home Assistant custom integration for the Light Manager Air by jb media."
readme = "README.md"
authors = [{ name = "Korbinian Mifka", email = "info@korbinian-mifka.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["jbmedia", "smart home", "light manager"]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.urls]
Homepage = "https://github.com/kmifka/hass_lmair"
